config_example - corrected a typo Controller - redirect() argument is now optional and defaults to REFERER Log - fixed checks on querycounter Model - added default for _table (which will become the only option) config_example - corrected a typo Controller - redirect() argument is now optional and defaults to REFERER Log - fixed checks on querycounter Model - added default for _table (which will become the only option) Userinput 	- now allowing value_type=integer 	- fixed a bug where input_type=select would never get auto-entered 	- _getFormData() can now only POST forms 	- added asArray() function for storing Models easily

--- a/config_example.ini
+++ b/config_example.ini
@@ -22,5 +22,6 @@ password =
 [Userinput:action]
 source[superglobal] = MULTIVIEW
 source[key] = 0
-value_type] = string
+value_type = string
+input_type = hidden
 default = index
