* THIS MARKS VERSION 1.1 *
Basic
	- re-arranged bootstrap() so a custom require is redundant
	- moved checkEnvironment check up
	- _getConfig() has been renamed to _getCached; which provides a generic method for loading cached classes.
	- Template class is now loaded from cache
	- array_has_keys no longer calls array_keys and forces input to be an array

Basic_Action
	- showTemplate() - no longer supports templates without extension
	- introduced showUserInput() with separate userinput templates in a nice directory structure

Basic_Config
	- added wakeup() which will reload the cache when necessary
	- splitted parsing to separate function
	- added support for comments and CONSTANTS

Basic_Controller
	- _initAction() no longer globs, but uses the Template functions based on the actual contentType from the to-be-loaded action
	- added a logEntry when redirecting to error_404

Basic_Database
	- Exceptions now passes mysql_errno
	- mysql_query explicitly uses our link
	- fetchAll() now supports second parameter for custom key in result

Basic_Exception
	- added $code and $previous to __construct
	- autoCreate now creates a hierarchy of exceptions
	- errorToException now logs to error_log when PRODUCTION_MODE is on

Basic_Log
	- renamed get_caller to getCaller

Basic_Model
	- _load() - now casting `id` to int
	- getProperties is now public, and no longer caches, as it leads to bugs when an object is load()ed, and the properties are cached from an empty object
	- _save now supports NULL values
	- parse_filters now supports boolean OR statements, by specifying |key
	- _find now returns an empty Basic_ModelSet when no results are found

Basic_ModelSet
	- now implements Countable
	- Model-objects now receive a reference to the set
	- getSimpleList now supports custom keys as well

Basic_Template
	- moved defines to class-constants
	- introduced _sourceFiles cache, this will greatly speed-up lookups for sourcefiles
	- _include now supports including files relative to themself

--- a/config_example.ini
+++ b/config_example.ini
@@ -6,7 +6,7 @@ name = TorStatus - v5
 baseUrl = ""
 defaultCacheLength =
 
-[Controller:sessions]
+[Sessions]
 enabled = false
 name = oFlowID
 lifetime = 31536000
@@ -18,6 +18,10 @@ host = localhost
 name = tor_network_status
 username = tor_status
 password = 
+
+[Template]
+cachePath  = APPLICATION_PATH/cache/Templates/
+sourcePath = APPLICATION_PATH/templates/
 
 [Userinput:action]
 source[superglobal] = MULTIVIEW
