Use protected instead of private, make userinputConfig protected
Basic
	- getCached() added support for Basic_StaleCacheException handling
	- _dispatch() added default Content-Type header
	- debug - added trace to output
Basic_Action
	- deprecated $this->userinput and config
	- we are now responsible for Basic::$userinput->run();
Basic_Config
	- implemented Basic_StaleCacheException
Basic_Controller
	- updated references to Userinput
Basic_Exception
	- now sending default Content-Type header
Basic_Log
	- commented lineNo detection since it is broken anyway
Basic_Template
	- implemented modifiedDetection for cached object
	- added config&userinput to internal variables list
	- now using ifsetor instead of trinary operator
	- implemented Basic_StaleCacheException in __wakeup
Basic_Userinput
	- complete rewrite, moved actual logic to Basic_UserinputValue
Basic_UserinputValue
	- new object with logic previously in Basic_Userinput
templates/ - replaced single form by directory-based setup

--- a/config_example.ini
+++ b/config_example.ini
@@ -26,6 +26,6 @@ sourcePath = APPLICATION_PATH/templates/
 [Userinput:action]
 source[superglobal] = MULTIVIEW
 source[key] = 0
-value_type = string
-input_type = hidden
+valueType = string
+inputType = hidden
 default = index
