Basic 	- introduced loadCached for faster autoloading (esp. non-existing Exceptions) 	- now expecting index.php to be in subdir (eg. htdocs) Basic_Controller 	- config.ini ; renamed Sessions to Session 	- Database doesn't need separate _init method Basic_Database 	- sqlite compatible; config now defines dsn 	- attributes are now configurable 	- setting errmode=exceptions Basic_DatabaseQuery 	- introduced isEmpty for removal of MYSQL_ATTR_USE_BUFFERED_QUERY, and rowCount() 	- execute just passes parameters, enables named parameters 	- implemented Exceptionhandling Basic_Entity 	- introduced create for easy creation 	- rewrote __get, check method before property 	- save is no longer uses mysql specific queries Basic_Exception 	- bugfix for non-existing Config-object Basic_Memcache 	- rewrote, now using memcached with OPT_PREFIX_KEY 	- removed all wrappers and most Logging Basic.include 	- added deduplicate boolean parameter

--- a/exampleApplication/.htaccess
+++ b/exampleApplication/.htaccess
@@ -1,13 +1,3 @@
-Options FollowSymlinks Multiviews
-
+# Preferably point your webserver to htdocs directly!
 RewriteEngine On
-RewriteRule ^cache/						/ [forbidden]
-RewriteRule ^library/					/ [forbidden]
-RewriteRule ^templates/					/ [forbidden]
-RewriteRule ^config.ini					/ [forbidden]
-
-RewriteBase /
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^.*$ /index.php
-
-AddDefaultCharset utf-8
+Rewriterule ^(.*)$ /htdocs/$1
