config_sample: explain how to configure (multiple) Memcache servers
ref https://github.com/SjonHortensius/3v4l_org/pull/15

--- a/config.example.ini
+++ b/config.example.ini
@@ -5,6 +5,10 @@ APPLICATION_NAME = MySite
 baseUrl = /
 protocol = http
 
+[Memcache]
+servers[c1][host] = 10.0.0.1
+servers[c1][port] = 11211
+
 [Database]
 dsn = pgsql:host=localhost;dbname=mySite
 username = website
