Config - refactor caching to use file instead of Memcache
this removes the weird cache-requires-config but
config-gets-stored-in-cache requirement. Remove 127001 default that was
used to work around that and move that requirement to the config

--- a/config.example.ini
+++ b/config.example.ini
@@ -5,9 +5,9 @@ APPLICATION_NAME = MySite
 baseUrl = /
 protocol = http
 
-[Memcache]
-servers[c1][host] = 10.0.0.1
-servers[c1][port] = 11211
+[Memcache.servers]
+local[host] = 127.0.0.1
+local[port] = 11211
 
 [Database]
 dsn = pgsql:host=localhost;dbname=mySite
